src/ingress/02-single-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: test-ingress
spec: 
  backend:
    serviceName: testsvc
    servicePort: 80
