src/ingress/03-fan-out.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: test-ingress
# START OMIT
spec:
  rules:
  - http:
      paths:
      - path: /foo
      backend:
          serviceName: service1
          servicePort: 4200
      - path: /bar
      backend:
          serviceName: service2
          servicePort: 8080
# END OMIT
